<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">音乐播放器</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="musicsearch">搜索歌曲</string>
    <string name="musiclist">歌曲列表</string>
    <string name="waitingplay">等待播放</string>
    <string name="playing">正在播放</string>
    <string name="playingnor">暂停播放</string>
    <string name="search">搜索</string>
    
    <string name="localmusiclist">本地歌曲</string>
    <string name="localmusiccount">0</string>
    <string name="downloadmusiclist">下载歌曲</string>
    <string name="downloadmusiccount">0</string>
    <string name="lovemusiclist">我的最爱</string>
    <string name="lovemusiccount">0</string>
    <string name="nearmusiclist">最近播放</string>
    <string name="nearmusiccount">0</string>
    <string name="songcount">0/0</string>
    
    <string name="musicsinger">刘德华</string>
    <string name="musicname">暗里着迷</string>
    <string name="currenttime">00:00</string>
    <string name="musictime">05:03</string>
    <string name="irl">关闭歌词</string>
    <string name="artist">DJ音乐</string>
    
    <string name="delete_music">删除歌曲</string>
    <string name="delete_music_irc">删除歌曲或歌词</string>
    <string name="delete_music_all">歌曲歌词同时删除</string>
    <string name="disable_favorite">取消收藏</string>
    <string name="disable_favorite_one">取消本首收藏</string>
    <string name="disable_favorite_all">取消全部收藏</string>
    <string name="delete_record">删除播放记录</string>
    <string name="delete_record_one">删除本条播放记录</string>
    <string name="delete_record_all">删除全部播放记录</string>
    
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    
</resources>
