<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="50.0dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/local_bt_selector" />    

    <TextView
        android:id="@+id/music_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9dp"
        android:layout_marginRight="5dp"
        android:textColor="#000000"
        android:text="@string/musictime" />
    <TextView
        android:id="@+id/music_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/albumImage"
        android:textColor="#000000"
        android:text="@string/musicname" />

    <TextView
        android:id="@+id/music_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/music_title"
        android:layout_marginLeft="5dp"       
        android:layout_toRightOf="@+id/albumImage"
        android:textColor="#000000"
        android:text="@string/musicsinger" />

     
</RelativeLayout>