<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayoutMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/music_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topbar_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp" 
        android:background="@drawable/topbar_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/music_list_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/musiclist"
            android:textColor="#ffffff"
            android:textSize="19sp" >
        </TextView>

        <Button
            android:id="@+id/jumpplaying_bt"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/jump_playing_selector"    />

        <Button
            android:id="@+id/music_search_bt"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/search_bt_selector"/>           
    </RelativeLayout>

    <RelativeLayout
          android:id="@+id/middlebar_layout" 
          android:layout_width="match_parent" 
          android:layout_height="match_parent"    
          android:layout_marginTop="70dp"
          android:layout_above="@+id/bottombar_layout"  >
          
          <RelativeLayout   android:id="@+id/middlebar_LeftTop_layout" 
              android:layout_width="140dp" 
              android:layout_height="140dp" 
              android:layout_alignParentTop="true"
              android:layout_marginLeft="15dp" >            
              <Button 
                  android:id="@+id/localmusiclist_bt"
                  android:layout_width="80dp"
                  android:layout_height="80dp"
                  android:layout_alignParentTop="true"
                  android:layout_marginLeft="30dp"
                  android:background="@drawable/local_bt_selector"  />
              <TextView 
                  android:id="@+id/localmusiclist_tv"
                  android:layout_width="wrap_content"
                  android:layout_height="22dp"                
                  android:layout_marginLeft="37dp"         
                  android:layout_marginTop="80dp"
                  android:text="@string/localmusiclist"                 
                  android:textColor="#ffffff"
                  android:textSize="7pt" />
              <TextView 
                  android:id="@+id/localmusiccount_tv"
                  android:layout_width="wrap_content"
                  android:layout_height="22dp"                
                  android:layout_marginLeft="65dp"         
                  android:layout_marginTop="105dp"
                  android:text="@string/localmusiccount"                 
                  android:textColor="#ffffff"
                  android:textSize="7pt" />        </RelativeLayout>

          <RelativeLayout   android:id="@+id/middlebar_RightTop_layout" 
              android:layout_width="140dp" 
              android:layout_height="140dp" 
              android:layout_alignParentTop="true"
              android:layout_alignParentRight="true"
              android:layout_marginRight="15dp">            
              <Button 
                  android:id="@+id/downloadmusiclist_bt"
                  android:layout_width="80dp"
                  android:layout_height="80dp"
                  android:layout_alignParentTop="true"
                  android:layout_marginLeft="30dp"
                  android:background="@drawable/download_bt_selector"  />
              <TextView 
                  android:id="@+id/downloadmusiclist_tv"
                  android:layout_width="wrap_content"
                  android:layout_height="22dp"                
                  android:layout_marginLeft="37dp"         
                  android:layout_marginTop="80dp"
                  android:text="@string/downloadmusiclist"                 
                  android:textColor="#ffffff"
                  android:textSize="7pt" />
              <TextView 
                  android:id="@+id/downloadmusiccount_tv"
                  android:layout_width="wrap_content"
                  android:layout_height="22dp"                
                  android:layout_marginLeft="65dp"         
                  android:layout_marginTop="105dp"
                  android:text="@string/downloadmusiccount"                 
                  android:textColor="#ffffff"
                  android:textSize="7pt" />        </RelativeLayout>
          
          <RelativeLayout   android:id="@+id/middlebar_LeftBottom_layout" 
              android:layout_width="140dp" 
              android:layout_height="140dp" 
              android:layout_marginTop="160dp"
              android:layout_marginLeft="15dp" >            
              <Button 
                  android:id="@+id/lovemusiclist_bt"
                  android:layout_width="80dp"
                  android:layout_height="80dp"
                  android:layout_alignParentTop="true"
                  android:layout_marginLeft="30dp"
                  android:background="@drawable/love_bt_selector"  />
              <TextView 
                  android:id="@+id/lovemusiclist_tv"
                  android:layout_width="wrap_content"
                  android:layout_height="22dp"                
                  android:layout_marginLeft="37dp"         
                  android:layout_marginTop="80dp"
                  android:text="@string/lovemusiclist"                 
                  android:textColor="#ffffff"
                  android:textSize="7pt" />
              <TextView 
                  android:id="@+id/lovemusiccount_tv"
                  android:layout_width="wrap_content"
                  android:layout_height="22dp"                
                  android:layout_marginLeft="65dp"         
                  android:layout_marginTop="105dp"
                  android:text="@string/lovemusiccount"                 
                  android:textColor="#ffffff"
                  android:textSize="7pt" />        </RelativeLayout>
          
          <RelativeLayout   android:id="@+id/middlebar_RightBottom_layout" 
              android:layout_width="140dp" 
              android:layout_height="140dp" 
              android:layout_marginTop="160dp"
              android:layout_alignParentRight="true"
              android:layout_marginRight="15dp">            
              <Button 
                  android:id="@+id/nearmusiclist_bt"
                  android:layout_width="80dp"
                  android:layout_height="80dp"
                  android:layout_alignParentTop="true"
                  android:layout_marginLeft="30dp"
                  android:background="@drawable/near_bt_selector"  />
              <TextView 
                  android:id="@+id/nearmusiclist_tv"
                  android:layout_width="wrap_content"
                  android:layout_height="22dp"                
                  android:layout_marginLeft="37dp"         
                  android:layout_marginTop="80dp"
                  android:text="@string/nearmusiclist"                 
                  android:textColor="#ffffff"
                  android:textSize="7pt" />
              <TextView 
                  android:id="@+id/nearmusiccount_tv"
                  android:layout_width="wrap_content"
                  android:layout_height="22dp"                
                  android:layout_marginLeft="65dp"         
                  android:layout_marginTop="105dp"
                  android:text="@string/nearmusiccount"                 
                  android:textColor="#ffffff"
                  android:textSize="7pt" />        </RelativeLayout>
          
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/bottombar_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true" 
        android:layout_alignParentLeft="true"  
        android:background="@drawable/bottombar_bg"   >

        <ImageView
            android:id="@+id/music_album_iv"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />
        
        <RelativeLayout
            android:id="@+id/music_about_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignTop="@+id/music_album_iv"
            android:layout_toRightOf="@id/music_album_iv" >
            <TextView
                android:id="@+id/music_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="2.0dp"
                android:layout_marginTop="5.0dp"
                android:text="@string/musicname"
                android:textColor="#ffffff"
                android:textSize="7pt" />
            <TextView
                android:id="@+id/music_siger_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/music_name_tv"
                android:layout_marginLeft="5.0dp"
                android:layout_marginTop="2.0dp"
                android:text="@string/musicsinger"
                android:textColor="#ffffff"
                android:textSize="7pt" />
        </RelativeLayout>
            
        <ToggleButton
            android:id="@+id/mainmusic_play_bt"
            android:layout_width="50dp"
            android:layout_height="50dp"
			android:layout_marginRight="70dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/play_bt_selector"
            android:textOff=""
            android:textOn="" />
        <Button
		    android:id="@+id/btn_love"
		    android:layout_width="50dp"
		    android:layout_height="50dp" 		    
		    android:layout_marginRight="5dp"
		    android:layout_alignParentRight="true"
		     android:layout_centerVertical="true"
		    android:background="@drawable/favorite_bt_selector" />
        
    </RelativeLayout>
    
</RelativeLayout>